# viberary

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  bert.yaml  config.yml  custom.ini  docker-compose.yml  logging.conf  logging.ini  prometheus.yml  pyproject.toml  pytest.ini  pyvenv.cfg  redis.conf  requirements.txt  setup_droplet.sh  viberary_eda_exp.ipynb
.github/workflows/: deploy.yml  main.yml  static.yml
api/: go.mod  go.sum  server.go
api/static/: results.html
data/: word2vec_input.csv
docker/local/: Dockerfile
docker/prod/: Dockerfile
docs/: PROCESSING.MD  README.md  SEARCHRECS.MD  index.html
flask_server/: api.py
flask_server/templates/: index.html  results.html
jsonparquet/: README.md  goodreads_books.parquet  pom.xml
notebooks/: 02_parquet_eda.ipynb  03_duckdb.ipynb  03_duckdb_eda.ipynb  04_word2vec.ipynb  05_cbow.ipynb  05_duckdb_0.7.1.ipynb  06_doc2vec.ipynb  cbow.ipynb  eda.ipynb  memray_tracing.ipynb  read_parquet.ipynb
server/: go.mod  go.sum  webserver.go
server/static/: form.html  index.html
site/: index.html
site/css/: styles.css
spark/: word2vec.py
src/: .dockerignore  Dockerfile  requirements.txt
src/api/: __init__.py  api.py  app.py  go.mod  main.py  vectorize.go  wsgi.py
src/bert/: README.md  cache.py  index_embeddings.py  indexer.py  knn_search.py  redis_conn.py  retriever.py  tqdm_logger.py  (+1 more)
til/: TIL.md
training_data/: generate_input.py
word2vec/: cbow.py  model.ckpt  model.py  preprocessor.py  requirements.txt  run_model.py  train.py  train_model.py
(+93 files in other folders)
