[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100 # override black's default line-length
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
# make it compatible with black
profile = "black"

[tool.ruff]

line-length = 120

exclude = [
    ".git",
    ".vscode",
    ".pytest_cache",
    ".bamboo",
    ".tecton",
    ".mypy_cache",
    ".env",
]

[tool.pytest]

pythonpath = "src"
